@@ -3,13 +3,13 @@ package com.ville.gestionincidents.service.dashboardAdmin;
 import com.ville.gestionincidents.dto.dashboardAdmin.DelaiResolutionDto;
 import com.ville.gestionincidents.dto.dashboardAdmin.IncidentParQuartierDto;
 import com.ville.gestionincidents.dto.dashboardAdmin.IncidentParServiceDto;
+import com.ville.gestionincidents.entity.Departement;
 import com.ville.gestionincidents.entity.Incident;
-import com.ville.gestionincidents.entity.ServiceMunicipal;
-import com.ville.gestionincidents.entity.Quartier;
 import com.ville.gestionincidents.enumeration.StatutIncident;
 import com.ville.gestionincidents.repository.IncidentRepository;
-import com.ville.gestionincidents.repository.ServiceMunicipalRepository;
 import com.ville.gestionincidents.repository.QuartierRepository;
+import com.ville.gestionincidents.repository.ServiceMunicipalRepository;
+import com.ville.gestionincidents.security.CurrentUserService;
 import com.ville.gestionincidents.util.export.CsvExportService;
 import com.ville.gestionincidents.util.export.PdfExportService;
 import lombok.RequiredArgsConstructor;
@@ -33,144 +33,165 @@ public class DashboardServiceImpl implements DashboardService {
     private final QuartierRepository quartierRepository;
     private final CsvExportService csvExportService;
     private final PdfExportService pdfExportService;
+    private final CurrentUserService currentUserService;
+
+    /* ===================== UTILS ===================== */
+
+    private LocalDateTime start(LocalDate d) {
+        return d.atStartOfDay();
+    }
+
+    private LocalDateTime end(LocalDate d) {
+        return d.atTime(23, 59, 59);
+    }
+
+    /* ===================== COMPTEURS ===================== */
 
     @Override
     @Transactional(readOnly = true)
-    public long countTotalIncidents(LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
-        return incidentRepository.countByDateDeclarationBetween(debut, fin);
+    public long countTotalIncidentsByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
+
+        return incidentRepository
+                .countByService_DepartementAndDateDeclarationBetween(
+                        d, start(dd), end(df));
     }
 
     @Override
     @Transactional(readOnly = true)
-    public long countIncidentsResolus(LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
-        return incidentRepository.countByDateDeclarationBetweenAndStatut(
-                debut, fin, StatutIncident.RESOLU);
+    public long countIncidentsResolusByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
+
+        return incidentRepository
+                .countByService_DepartementAndDateDeclarationBetweenAndStatut(
+                        d, start(dd), end(df), StatutIncident.RESOLU);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public long countIncidentsEnCours(LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
-        return incidentRepository.countByDateDeclarationBetweenAndStatutIn(
-                debut, fin, Arrays.asList(
-                        StatutIncident.PRIS_EN_CHARGE,
-                        StatutIncident.EN_RESOLUTION
-                ));
+    public long countIncidentsEnCoursByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
+
+        return incidentRepository
+                .countByService_DepartementAndDateDeclarationBetweenAndStatutIn(
+                        d,
+                        start(dd),
+                        end(df),
+                        List.of(
+                                StatutIncident.PRIS_EN_CHARGE,
+                                StatutIncident.EN_RESOLUTION
+                        )
+                );
     }
 
     @Override
     @Transactional(readOnly = true)
-    public double calculerDelaiMoyenResolution(LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
+    public double calculerDelaiMoyenResolutionByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
 
-        List<Incident> incidentsResolus = incidentRepository
-                .findByDateDeclarationBetweenAndStatut(debut, fin, StatutIncident.RESOLU);
+        List<Incident> incidents =
+                incidentRepository.findByDateDeclarationBetween(start(dd), end(df))
+                        .stream()
+                        .filter(i ->
+                                i.getService() != null &&
+                                        i.getService().getDepartement().equals(d) &&
+                                        i.getStatut() == StatutIncident.RESOLU &&
+                                        i.getDateDerniereMiseAJour() != null
+                        )
+                        .collect(Collectors.toList());
 
-        if (incidentsResolus.isEmpty()) {
-            return 0.0;
-        }
+        if (incidents.isEmpty()) return 0;
 
-        double totalDelai = incidentsResolus.stream()
-                .filter(i -> i.getDateDeclaration() != null && i.getDateDerniereMiseAJour() != null)
-                .mapToLong(i -> ChronoUnit.DAYS.between(
-                        i.getDateDeclaration(),
-                        i.getDateDerniereMiseAJour()))
-                .sum();
-
-        return totalDelai / incidentsResolus.size();
+        return incidents.stream()
+                .mapToLong(i ->
+                        ChronoUnit.DAYS.between(
+                                i.getDateDeclaration(),
+                                i.getDateDerniereMiseAJour()
+                        )
+                )
+                .average()
+                .orElse(0);
     }
+
+    /* ===================== GRAPHIQUES ===================== */
 
     @Override
     @Transactional(readOnly = true)
-    public List<IncidentParServiceDto> getIncidentsParService(
-            LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
+    public List<IncidentParServiceDto> getIncidentsParServiceByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
 
-        List<ServiceMunicipal> services = serviceMunicipalRepository.findAll();
-
-        return services.stream()
-                .map(service -> {
-                    long count = incidentRepository.countByServiceAndDateDeclarationBetween(
-                            service, debut, fin);
-                    return new IncidentParServiceDto(service.getNom(), count);
-                })
-                .filter(dto -> dto.getNombre() > 0) // Filtrer les services sans incidents
-                .sorted((a, b) -> Long.compare(b.getNombre(), a.getNombre()))
+        return serviceMunicipalRepository.findByDepartement(d).stream()
+                .map(s -> new IncidentParServiceDto(
+                        s.getNom(),
+                        incidentRepository.countByServiceAndDateDeclarationBetween(
+                                s, start(dd), end(df)
+                        )
+                ))
+                .filter(x -> x.getNombre() > 0)
                 .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<IncidentParQuartierDto> getIncidentsParQuartier(
-            LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
+    public List<IncidentParQuartierDto> getIncidentsParQuartierByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
 
-        List<Quartier> quartiers = quartierRepository.findAll();
-
-        return quartiers.stream()
-                .map(quartier -> {
-                    long count = incidentRepository.countByQuartierAndDateDeclarationBetween(
-                            quartier, debut, fin);
-                    return new IncidentParQuartierDto(quartier.getNom(), count);
-                })
-                .filter(dto -> dto.getNombre() > 0)
-                .sorted((a, b) -> Long.compare(b.getNombre(), a.getNombre()))
+        return incidentRepository.findByDateDeclarationBetween(start(dd), end(df))
+                .stream()
+                .filter(i ->
+                        i.getService() != null &&
+                                i.getService().getDepartement().equals(d) &&
+                                i.getQuartier() != null
+                )
+                .collect(Collectors.groupingBy(
+                        i -> i.getQuartier().getNom(),
+                        Collectors.counting()
+                ))
+                .entrySet()
+                .stream()
+                .map(e -> new IncidentParQuartierDto(e.getKey(), e.getValue()))
                 .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<DelaiResolutionDto> getDelaiResolutionParService(
-            LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
+    public List<DelaiResolutionDto> getDelaiResolutionParServiceByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
 
-        List<ServiceMunicipal> services = serviceMunicipalRepository.findAll();
-
-        return services.stream()
-                .map(service -> {
-                    List<Incident> incidentsResolus = incidentRepository
+        return serviceMunicipalRepository.findByDepartement(d).stream()
+                .map(s -> {
+                    var list = incidentRepository
                             .findByServiceAndDateDeclarationBetweenAndStatut(
-                                    service, debut, fin, StatutIncident.RESOLU);
+                                    s, start(dd), end(df), StatutIncident.RESOLU);
 
-                    if (incidentsResolus.isEmpty()) {
-                        return new DelaiResolutionDto(service.getNom(), 0.0);
-                    }
-
-                    double delaiMoyen = incidentsResolus.stream()
-                            .filter(i -> i.getDateDeclaration() != null &&
-                                    i.getDateDerniereMiseAJour() != null)
-                            .mapToLong(i -> ChronoUnit.DAYS.between(
-                                    i.getDateDeclaration(),
-                                    i.getDateDerniereMiseAJour()))
+                    double avg = list.stream()
+                            .filter(i -> i.getDateDerniereMiseAJour() != null)
+                            .mapToLong(i ->
+                                    ChronoUnit.DAYS.between(
+                                            i.getDateDeclaration(),
+                                            i.getDateDerniereMiseAJour()
+                                    )
+                            )
                             .average()
-                            .orElse(0.0);
+                            .orElse(0);
 
-                    return new DelaiResolutionDto(service.getNom(), delaiMoyen);
+                    return new DelaiResolutionDto(s.getNom(), avg);
                 })
-                .filter(dto -> dto.getDelaiMoyen() > 0)
+                .filter(x -> x.getDelaiMoyen() > 0)
                 .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public Map<String, Long> getIncidentsParStatut(LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
+    public Map<String, Long> getIncidentsParStatutByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
 
         Map<String, Long> result = new LinkedHashMap<>();
 
         for (StatutIncident statut : StatutIncident.values()) {
-            long count = incidentRepository.countByDateDeclarationBetweenAndStatut(
-                    debut, fin, statut);
+            long count = incidentRepository
+                    .countByService_DepartementAndDateDeclarationBetweenAndStatut(
+                            d, start(dd), end(df), statut);
             result.put(statut.name(), count);
         }
 
@@ -179,14 +200,15 @@ public class DashboardServiceImpl implements DashboardService {
 
     @Override
     @Transactional(readOnly = true)
-    public Map<String, Long> getIncidentsParMois(LocalDate dateDebut, LocalDate dateFin) {
-        LocalDateTime debut = dateDebut.atStartOfDay();
-        LocalDateTime fin = dateFin.atTime(23, 59, 59);
+    public Map<String, Long> getIncidentsParMoisByDepartement(
+            Departement d, LocalDate dd, LocalDate df) {
 
-        List<Incident> incidents = incidentRepository
-                .findByDateDeclarationBetween(debut, fin);
-
-        return incidents.stream()
+        return incidentRepository.findByDateDeclarationBetween(start(dd), end(df))
+                .stream()
+                .filter(i ->
+                        i.getService() != null &&
+                                i.getService().getDepartement().equals(d)
+                )
                 .collect(Collectors.groupingBy(
                         i -> i.getDateDeclaration().getYear() + "-" +
                                 String.format("%02d", i.getDateDeclaration().getMonthValue()),
@@ -194,31 +216,37 @@ public class DashboardServiceImpl implements DashboardService {
                 ));
     }
 
+    /* ===================== EXPORTS ===================== */
+
     @Override
-    public void exportCsv(LocalDate dateDebut, LocalDate dateFin, Writer writer)
-            throws Exception {
+    public void exportCsv(LocalDate dd, LocalDate df, Writer writer) throws Exception {
+
+        Departement dept = currentUserService.getCurrentUser().getDepartement();
+
         csvExportService.exportDashboardData(
-                dateDebut, dateFin,
-                getIncidentsParService(dateDebut, dateFin),
-                getIncidentsParQuartier(dateDebut, dateFin),
-                getDelaiResolutionParService(dateDebut, dateFin),
+                dd, df,
+                getIncidentsParServiceByDepartement(dept, dd, df),
+                getIncidentsParQuartierByDepartement(dept, dd, df),
+                getDelaiResolutionParServiceByDepartement(dept, dd, df),
                 writer
         );
     }
 
     @Override
-    public void exportPdf(LocalDate dateDebut, LocalDate dateFin, OutputStream outputStream)
-            throws Exception {
+    public void exportPdf(LocalDate dd, LocalDate df, OutputStream out) throws Exception {
+
+        Departement dept = currentUserService.getCurrentUser().getDepartement();
+
         pdfExportService.exportDashboardData(
-                dateDebut, dateFin,
-                countTotalIncidents(dateDebut, dateFin),
-                countIncidentsResolus(dateDebut, dateFin),
-                countIncidentsEnCours(dateDebut, dateFin),
-                calculerDelaiMoyenResolution(dateDebut, dateFin),
-                getIncidentsParService(dateDebut, dateFin),
-                getIncidentsParQuartier(dateDebut, dateFin),
-                getDelaiResolutionParService(dateDebut, dateFin),
-                outputStream
+                dd, df,
+                countTotalIncidentsByDepartement(dept, dd, df),
+                countIncidentsResolusByDepartement(dept, dd, df),
+                countIncidentsEnCoursByDepartement(dept, dd, df),
+                calculerDelaiMoyenResolutionByDepartement(dept, dd, df),
+                getIncidentsParServiceByDepartement(dept, dd, df),
+                getIncidentsParQuartierByDepartement(dept, dd, df),
+                getDelaiResolutionParServiceByDepartement(dept, dd, df),
+                out
         );
     }
 }
